@@ -2,7 +2,7 @@
 // { dg-do run { target c++17 } }
 // { dg-require-filesystem-ts "" }
 
-// Copyright (C) 2014-2018 Free Software Foundation, Inc.
+// Copyright (C) 2018 Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -19,48 +19,60 @@
 // with this library; see the file COPYING3.  If not see
 // <http://www.gnu.org/licenses/>.
 
-// C++17 30.10.7.4.9 path decomposition [fs.path.decompose]
+// C++17 30.10.8.6 path non-member functions [fs.path.nonmember]
 
 #include <filesystem>
-#include <testsuite_hooks.h>
 #include <testsuite_fs.h>
 
 using std::filesystem::path;
+using __gnu_test::compare_paths;
+
+// operator/(const path&, const path&)
+// Equivalent to: return path(lhs) /= rhs;
+
+void test(const path& lhs, const path& rhs)
+{
+  compare_paths( lhs / rhs, path(lhs) /= rhs );
+}
 
 void
 test01()
 {
-  // [fs.path.decompose] p7
-  VERIFY( path("/foo/bar.txt").filename() == "bar.txt" );
-  VERIFY( path("/foo/bar").filename()     == "bar"     );
-  VERIFY( path("/foo/bar/").filename()    == ""        );
-  VERIFY( path("/").filename()            == ""        );
-#ifdef __CYGWIN__
-  VERIFY( path("//host").filename()       == ""        );
-#else
-  VERIFY( path("//host").filename()       == "host"    );
-#endif
-  VERIFY( path(".").filename()            == "."       );
-  VERIFY( path("..").filename()           == ".."      );
+  test( "/foo/bar", "/foo/" );
+
+  test( "baz", "baz" );
+  test( "baz/", "baz" );
+  test( "baz", "/foo/bar" );
+  test( "baz/", "/foo/bar" );
+
+  test( "", "" );
+  test( "", "rel" );
+
+  test( "dir/", "/file" );
+  test( "dir/", "file" );
 }
 
 void
 test02()
 {
+  // C++17 [fs.path.append] p4
+  test( "//host", "foo" );
+  test( "//host/", "foo" );
+  test( "foo", "" );
+  test( "foo", "/bar" );
+  test( "foo", "c:/bar" );
+  test( "foo", "c:" );
+  test( "c:", "" );
+  test( "c:foo", "/bar" );
+  test( "foo", "c:\\bar" );
+}
+
+void
+test03()
+{
   for (const path& p : __gnu_test::test_paths)
-  {
-    path f = p.filename();
-    if (p.empty())
-      VERIFY( f.empty() );
-    else
-    {
-      const path back = *--p.end();
-      if (back.has_root_path())
-	VERIFY( f.empty() );
-      else
-	VERIFY( f == back );
-    }
-  }
+    for (const path& q : __gnu_test::test_paths)
+      test(p, q);
 }
 
 int
@@ -68,4 +80,5 @@ main()
 {
   test01();
   test02();
+  test03();
 }
